<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s Empty here…</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an Item</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for Quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <string name="category_supplier_name">Supplier Name</string>

    <string name="category_supplier_phone">Supplier Phone Number</string>

    <string name="hint_item_supplier">Supplier Name</string>

    <string name="hint_item_phone">Phone Number</string>
    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Product Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_description">Description</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!-- Units for price of the item (euro) [CHAR LIMIT=5] -->
    <string name="unit_item_price">\u20AC</string>

    <!-- Label for the item's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_description">Unknown Description</string>
    <string name="inventoryimage">Inventory Image</string>
    <string name="sale">SALE</string>
    <string name="samsung">Samsung</string>
    <string name="s6description">S6 Gold</string>
    <string name="eddie">Eddie</string>
    <string name="phoneNumber">6937734972</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="stock">Stock Quantity:</string>
    <string name="test">test</string>
    <string name="empty">empty</string>
    <string name="nolessthan1">No Less than 1 Item</string>
    <string name="productNameBlank">The Product Name cannot be blank</string>
    <string name="descriptionBlank">The Description cannot be blank</string>
    <string name="priceEmpty">The price may not be empty</string>
    <string name="unitPriceZero">The Stock Unit Price Cannot be less than Zero</string>
    <string name="supplierNameBlank">The Supplier Name cannot be blank</string>
    <string name="supplierPhoneBlank">The Supplier Phone cannot be blank</string>
    <string name="emptyQuantity">The Quantity may not be empty</string>
    <string name="stockQuantityZero">The Stock Quantity Cannot be less than Zero</string>
    <string name="itemOut">Item out of stock</string>
</resources>
