<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item in the list of items -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">


    <Button
        android:id="@+id/list_item_sale"
        android:text="@string/sale"
        style="@style/saleStyleButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            tools:text="@string/test"
            style="@style/nameStyleDispl" />

        <TextView
            android:id="@+id/summary"
            tools:text="@string/test"
            style="@style/summaryStyleDispl" />

        <TextView
            android:id="@+id/product_price"
            tools:text="@string/test"
            style="@style/productPriceStyleDispl" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_quantity"
                android:text="@string/stock"
                style="@style/quantityTextStyle" />

            <TextView
                android:id="@+id/quantity"
                android:text="@string/one"
                style="@style/quantityDisplay" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

