<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_item_description"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_description"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <Button
                android:id="@+id/buttonminus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-" />
            <!-- Quantity -->
            <EditText
                android:id="@+id/quantity_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="55dp"
                style="@style/EditorFieldStyle"
                android:text="1"
                android:hint="1"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_alignParentLeft="true" />

            <Button
                android:id="@+id/buttonplus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="+" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_price"
                android:inputType="number" />

            <!-- Units for price (euro) -->
            <TextView
                android:id="@+id/label_p_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_item_price" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_name" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_supplier"
                android:inputType="textCapWords" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Supplier Phone category -->
    <LinearLayout
        android:id="@+id/supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_phone" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_phone"
                android:inputType="phone" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
