<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the list of items -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_shelter_image"
            android:src="@drawable/inventoryapp"
            style="@style/emptyImage"
            android:contentDescription="@string/empty"/>

        <TextView
            android:id="@+id/empty_title_text"
            android:text="@string/empty_view_title_text"
            style="@style/emptyText" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:text="@string/empty_view_subtitle_text"
            style="@style/emptySubText" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:src="@drawable/ic_add_circle_black_24dp"
        style="@style/addCircleBlack" />
</RelativeLayout>
